Fix: Restore toggle scrollbar functionality

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -38,14 +38,21 @@ img {
   top: 100px;
 } */
 
+.hidden-scrollbar {
+  overflow-x: auto;
+}
 .hidden-scrollbar::-webkit-scrollbar {
   display: none;
+}
+
+.hidden-scrollbar-x {
+  overflow-x: hidden; /* FIX this is a hack to hide h-scrollbar with pdfs sometimes*/
 }
 
 #page-container {
   width: 100%;
   height: 100%;
-  overflow-x: hidden; /* FIX this is a hack to hide h-scrollbar with pdfs sometimes*/
+  /*overflow-x: hidden; /* FIX this is a hack to hide h-scrollbar with pdfs sometimes*/
 }
 
 /* CENTER BLOCK OPEN FILE INFO */
